# Azazels-Hex-Book

./: .copier-answers.hexdoc-hexcasting.yml  .env  Patterns.java  gitadd.sh  gradle.properties  pyproject.toml
.github/workflows/: build_docs.yml
.hexdoc/: azazelshexes.hexdoc.json
_site/dst/docs/meta/: sitemap-minecraft.json  sitemap.json
_site/dst/docs/v/1.0.0/: index.html
_site/dst/docs/v/1.0.0/1.0/en_us/: .sitemap-marker.json
_site/dst/docs/v/1.0.0/1.0/en_us/basics/: index.html
_site/dst/docs/v/1.0.0/1.0/en_us/greatwork/: index.html
_site/dst/docs/v/1.0.0/1.0/en_us/items/: index.html
_site/dst/docs/v/1.0.0/1.0/en_us/lore/: index.html
_site/dst/docs/v/1.0.0/1.0/en_us/yupyup/: index.html
_site/src/docs/v/1.0.0/1.0/en_us/: index.html
_site/src/docs/v/1.0.0/1.0/en_us/casting/: index.html
_site/src/docs/v/1.0.0/1.0/en_us/creative_unlocker/: index.html
_site/src/docs/v/1.0.0/1.0/en_us/interop/: index.html
_site/src/docs/v/1.0.0/1.0/en_us/patterns/: index.html
_site/src/docs/v/latest/6df5b46/en_us/: .sitemap-marker.json  index.html  index.js
_site/src/docs/v/latest/6df5b46/en_us/basics/: index.html
_site/src/docs/v/latest/6df5b46/en_us/casting/: index.html
_site/src/docs/v/latest/6df5b46/en_us/creative_unlocker/: index.html
_site/src/docs/v/latest/6df5b46/en_us/greatwork/: index.html
_site/src/docs/v/latest/6df5b46/en_us/interop/: index.html
_site/src/docs/v/latest/6df5b46/en_us/items/: index.html
commonResources/assets/hexcasting/patchouli_books/thehexbook/en_us/entries/: yupyup.json
commonResources/src/main/resources/: azazelshexes.mixins.json
commonResources/src/main/resources/assets/azazelshexes/lang/: en_us.json
doc/: README.md  hexdoc.toml
doc/resources/assets/azazelshexes/lang/: en_us.flatten.json5
doc/src/hexdoc_azazelshexes/: __gradle_version__.py  _hooks.py
docs/: CNAME  index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/latest/master/en_us/: .sitemap-marker.json  index.html
docs/v/latest/master/en_us/basics/: index.html
docs/v/latest/master/en_us/casting/: index.html
docs/v/latest/master/en_us/creative_unlocker/: index.html
docs/v/latest/master/en_us/greatwork/: index.html
docs/v/latest/master/en_us/interop/: index.html
docs/v/latest/master/en_us/items/: index.html
docs/v/latest/master/en_us/lore/: index.html
docs/v/latest/master/en_us/patterns/: index.html
docs/v/latest/master/en_us/patterns/great_spells/: index.html
docs/v/latest/master/en_us/patterns/spells/: index.html
docs/v/latest/master/en_us/yupyup/: index.html
docs/v/latest/master/en_us/yupyup/azazelshexes:zany/: index.html
fabricResources/: azazelshexes.fabric.mixins.json
fabricResources/src/main/resources/: fabric.mod.json
forgeResources/resources/: azazelshexes.forge.mixins.json
(+9 files in other folders)
